fixed text visibility on the about page

--- a/styleabout.css
+++ b/styleabout.css
@@ -1,3 +1,7 @@
+.item2, .item3 {
+	background-color: rgba(244,244,244,.65);
+}
+
 .item1 {
 	grid-area: header;
 	box-shadow: 0 0 1rem 0 rgba(0,0,0,.5);
@@ -5,16 +9,16 @@
 
 .item2 {
 	grid-area: left;
-	padding: 10px;
-	width: 80%;
-	margin: 0 auto;
+	padding: 10px 17px 10px 21px;
+	width: 90%;
+	margin: 14px 0 15px 5%;
 }
 
 .item3 {
 	grid-area: right;
-	padding: 10px;
-	width: 80%;
-	margin: 0 auto;
+	padding: 10px 21px 10px 18px;
+	width: 90%;
+	margin: 14px 5% 15px 0;
 }
 
 .grid-container {
